third_party/rust/chromium_crates_io/vendor/derive_more-v2/tests/compile_fail/from_str/enum_same_string_representation.rs
#![allow(non_camel_case_types)]

#[derive(derive_more::FromStr)]
enum Enum {
    abc,
    #[from_str(rename_all = "lowercase")]
    AB_C,
}

#[derive(derive_more::FromStr)]
#[from_str(rename_all = "SCREAMING_SNAKE_CASE")]
enum EnumTop {
    BaR,
    BA_R,
}

fn main() {}
